test/equality/negative/wrong_args.mli
val f : int -> string -> bool
(*@ equality *)
